Cros splitscreen: Update window mask layer's bounds in overview mode.

If a window's bounds are changed while it's in overview mode, its mask
layer's bounds should also be changed accordingly.

Bug: 826489
Change-Id: I47b315a1cfc796bb53e6e3f1ffe0a1d22f6c5836
Reviewed-on: https://chromium-review.googlesource.com/982545
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546576}
Former-commit-id: 3058c82b689803f9031a4fbfa1d7cd7f4b856b07